<resources>
    <string name="app_name">GoTime</string>
    <string name="action_settings">Settings</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>

    <!--Strings for Event add/edit fragment-->
    <string name="titleLabel">Event Title</string>

    <string name="dateLabel">Event Date</string>
    <string name="dateHint">Select Date</string>

    <string name="timeLabel">Event Time</string>
    <string name="timeHint">Select Time</string>

    <string name="notes_label">Notes</string>
    <string name="notes_hint">Notes about the event</string>

    <string name="prepTimeLabel">Minutes to Prepare</string>
    <string name="prepTimeHint">Enter Minutes to Prepare</string>
    <string name="defaultPrepTimeHint">Enter Default Preparation Time</string>

    <string name="transportMethodLabel">Transportation Method</string>

    <string name="locLabel">Event Location</string>

    <string name="cancelButton">Cancel</string>
    <string name="saveButton">Save</string>

    <string-array name="transportOptions">
        <item>Walking</item>
        <item>Driving</item>
        <item>Bicycling</item>
    </string-array>
    <string name="search_events">Search Events</string>
    <string-array name="alarm">
        <item>Alarm Sound #1</item>
        <item>Alarm Sound #2</item>
        <item>Alarm Sound #3</item>
    </string-array>
    <string name="default_preptime_label">Default Preparation Time (Minutes)</string>
    <string name="alarm_type_label">Alarm Type</string>
    <string name="default_transportmethod_label">Default Transportation Method</string>

    <string name="delete_event">Delete Event</string>
    <string name="down_arrow">Down arrow</string>
    <string name="google_authentication">Google Authentication</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="calculating">Calculating time for next event…</string>
    <string name="noLocServices">Location Services Disabled</string>
</resources>
