<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/app_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_preptime_label"
            android:id="@+id/prepTime" />

        <EditText
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/defaultPrepTime" />

        <TextView
            android:text="@string/alarm_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alarmType" />

        <RelativeLayout
            android:id="@+id/alarm_spinner_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_field">
            <Spinner
                android:id="@+id/alarm_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/alarm"
                android:textSize="14sp"
                android:background="@null"
                android:minHeight="0dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_down_arrow" />
        </RelativeLayout>


        <TextView
            android:text="@string/default_transportmethod_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <RelativeLayout
            android:id="@+id/transport_spinner_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="10dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/edit_text_field">
            <Spinner
                android:id="@+id/transport_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/transportOptions"
                android:textSize="14sp"
                android:background="@null"
                android:minHeight="0dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_down_arrow" />
        </RelativeLayout>


        <ImageButton
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_width="268dp"
            android:layout_height="49dp"
            app:srcCompat="@drawable/google_button"
            android:id="@+id/imageButton2"
            android:scaleType="centerCrop"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="70dp"
            android:elevation="0dp" />

        <LinearLayout
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/textView14"
            android:id="@+id/dayNightView2"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp">

            <Button
                android:text="CANCEL"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_width="130dp" />

            <Button
                android:text="SAVE"
                android:layout_marginLeft="50dp"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:id="@+id/button2"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onSave" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>